--- a/x86-64.config
+++ b/x86-64.config
@@ -32,6 +32,7 @@ CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_frps=y
 # CONFIG_PACKAGE_grub2-efi is not set
 CONFIG_PACKAGE_haproxy=y
+CONFIG_PACKAGE_igmpproxy=y
 CONFIG_PACKAGE_hysteria=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ip6tables-extra=y
