--- a/x86-64.config
+++ b/x86-64.config
@@ -72,6 +72,11 @@ CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_librrd1=y
 CONFIG_PACKAGE_libruby=y
 CONFIG_PACKAGE_libyaml=y
+
+CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
+# CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary is not set
+
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 CONFIG_PACKAGE_luci-app-fileassistant=y
