--- a/x86-64.config
+++ b/x86-64.config
@@ -76,7 +76,7 @@ CONFIG_PACKAGE_libyaml=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
 # CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus is not set
+CONFIG_PACKAGE_luci-app-ssr-plus=y
 # CONFIG_PACKAGE_luci-app-openclash is not set
 
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
