--- a/x86-64.config
+++ b/x86-64.config
@@ -119,6 +119,8 @@ CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_openssh-keygen=y
 CONFIG_PACKAGE_openssh-server=y
+CONFIG_OPENSSH_LIBFIDO2=y
+CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_pptpd=y
 CONFIG_PACKAGE_rrdtool1=y
 CONFIG_PACKAGE_ruby=y
