--- a/.github/workflows/r5s.yml
+++ b/.github/workflows/r5s.yml
@@ -33,7 +33,7 @@ on:
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_BRANCH: openwrt-22.7.19
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: r5s.config
   DIY_P1_SH: diy-part1.sh
