--- a/r5s.config
+++ b/r5s.config
@@ -160,8 +160,8 @@ CONFIG_OPENSSH_LIBFIDO2=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 # CONFIG_PACKAGE_kmod-shortcut-fe is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE is not set
-# CONFIG_PACKAGE_kmod-shortcut-fe-cm is not set
-# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_CM is not set
+CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_CM=y
 
 
 # CONFIG_PACKAGE_luci-app-wol is not set
