--- a/.github/workflows/ea8500.yml
+++ b/.github/workflows/ea8500.yml
@@ -26,10 +26,10 @@ on:
 #      - master
 #    paths:
 #      - 'ea8500.config'
-#  schedule:
-#    - cron: 0 17 * * *
-#  watch:
-#    types: started
+  schedule:
+    - cron: 0 17 * * *
+  watch:
+    types: started
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
