--- a/x86-64.config
+++ b/x86-64.config
@@ -89,8 +89,8 @@ CONFIG_PACKAGE_luci-app-zerotier=y
 # CONFIG_PACKAGE_luci-app-statistics is not set
 # CONFIG_PACKAGE_luci-i18n-statistics-zh-cn is not set
 CONFIG_PACKAGE_luci-app-syncdial=y
-CONFIG_PACKAGE_kmod-shortcut-fe=y
-CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
+# CONFIG_PACKAGE_kmod-shortcut-fe=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
 # CONFIG_PACKAGE_kmod-shortcut-fe-cm is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_CM is not set
 
