--- a/x86-64+.config
+++ b/x86-64+.config
@@ -2,6 +2,7 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_BIND_ENABLE_DOH=y
+CONFIG_NODEJS_16=y
 # CONFIG_GRUB_EFI_IMAGES is not set
 CONFIG_GRUB_IMAGES=y
 CONFIG_OPENSSH_LIBFIDO2=y
