--- a/.github/workflows/miwifi.yml
+++ b/.github/workflows/miwifi.yml
@@ -51,7 +51,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v3
 
     - name: Initialization environment
       env:
