--- a/.github/workflows/miwifi.yml
+++ b/.github/workflows/miwifi.yml
@@ -187,7 +187,7 @@ jobs:
         files: ${{ env.FIRMWARE }}/*
 
     - name: Delete workflow runs
-      uses: GitRML/delete-workflow-runs@v3
+      uses: GitRML/delete-workflow-runs@main
       with:
         retain_days: 7
         keep_minimum_runs: 7
