--- a/.github/workflows/r5s.yml
+++ b/.github/workflows/r5s.yml
@@ -66,7 +66,8 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
-
+        pip3 install pyelftools
+        
     - name: Clone source code
       working-directory: /workdir
       run: |
