--- a/.github/workflows/r5s.yml
+++ b/.github/workflows/r5s.yml
@@ -63,11 +63,12 @@ jobs:
         sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2004)
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
+        sudo apt-get install python-pyelftools python3-pyelftools -y
         sudo apt-get install build-essential linux-headers-$(uname -r)
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
-        
+                
     - name: Clone source code
       working-directory: /workdir
       run: |
